# src/controllers/parent.js
@@ -1,29 +1,28 @@
 const PupilModel = require("../models/pupil");
-const CheckoutModel = require("../models/checkout");
 const { infoLogger, errorLogger } = require("../utils/errorHandler");
-const { sign, verify } = require("jsonwebtoken");
+const { sign } = require("jsonwebtoken");
 const { default: mongoose } = require("mongoose");
 const moment = require("moment");
 
-// function generateVerificationCode() {
-//   return Math.floor(100000 + Math.random() * 900000).toString();
-// }
+function generateVerificationCode() {
+  return Math.floor(100000 + Math.random() * 900000).toString();
+}
 
-async function parentAccess(req, res) {
+async function parentVerification(req, res) {
   try {
+    infoLogger(req);
     const existPupil = await PupilModel.findOne({
       "parent.phone": req.body?.phone,
     });
     if (!existPupil) {
       const msg = `Failed, perhaps parent's mobile number not specified or invalid input number !`;
-      //   errorLogger(req, msg, 400);
+      errorLogger(req, msg, 400);
       return res.status(400).json({ msg });
     }
 
-    if (process.env.PARENT_VERIFICATION !== req.body.verificationCode) {
-      const msg = `Invalid verification code !`;
-      return res.status(400).json({ msg });
-    }
+    req.session.pupilId = existPupil._id;
+    req.session.phoneNumber = existPupil?.parent?.phone;
+    req.session.verificationCode = generateVerificationCode();
 
     // const response = {
     //   mobile_phone: existPupil?.parent?.phone,
@@ -31,10 +30,33 @@ async function parentAccess(req, res) {
     //   from: 4546,
     // };
 
+    return res.status(200).json({
+      msg: `Your verification code: ${req.session.verificationCode}`,
+    });
+  } catch (err) {
+    errorLogger(req, err);
+    return res.status(500).json({
+      msg: err.message ? err.message : err,
+    });
+  }
+}
+
+async function parentAccess(req, res) {
+  try {
+    infoLogger(req);
+    if (
+      !req.session?.verificationCode ||
+      req.session.verificationCode !== req.body.verificationCode
+    ) {
+      return res.status(400).json({
+        msg: "Session expired or verification number not provided/valid !",
+      });
+    }
+
     const token = sign(
       {
-        pupil: existPupil?._id,
-        phone: existPupil?.parent?.phone,
+        pupil: req.session?.pupilId,
+        phone: req.session?.phoneNumber,
         role: "parent",
       },
       process.env.JWT_SECRET,
@@ -46,6 +68,7 @@ async function parentAccess(req, res) {
       token,
     });
   } catch (err) {
+    errorLogger(req, err);
     return res.status(500).json({
       msg: err.message ? err.message : err,
     });
@@ -53,22 +76,22 @@ async function parentAccess(req, res) {
 }
 
 async function pupilReports(req, res) {
-  // const { startDate, endDate } = req.query;
   try {
+    infoLogger(req);
     const startDate = moment(req.query.startDate).startOf("date").toDate();
     const endDate = moment(req.query.endDate).endOf("date").toDate();
     const daysInMonth = moment(endDate).diff(startDate, "days");
     const fullMonthDays = Array.from({ length: daysInMonth + 1 }, (_, i) =>
       moment(startDate).add(i, "days").format("YYYY-MM-DD")
     );
-    // console.log(startDate, "- st", endDate, "- end", moment(startDate).format("YYYY-MM-DD hh:mm"), '- st for', moment(endDate).format("YYYY-MM-DD hh:mm"), '- end for',);
+    const pupilIdentifier = req?.user?.pupil || req.query?.pupil;
     let pupilReports = [];
 
     if (startDate && endDate) {
       pupilReports = await PupilModel.aggregate([
         {
           $match: {
-            _id: new mongoose.Types.ObjectId(req.query.pupil),
+            _id: new mongoose.Types.ObjectId(pupilIdentifier),
           },
         },
         {
@@ -301,6 +324,7 @@ async function pupilReports(req, res) {
 
     return res.status(200).json(pupilReports);
   } catch (err) {
+    errorLogger(req, err);
     return res.status(500).json({
       msg: err.message ? err.message : err,
     });
@@ -308,6 +332,7 @@ async function pupilReports(req, res) {
 }
 
 module.exports = {
+  parentVerification,
   parentAccess,
   pupilReports,
 };
