# src/public/swagger_boss.yaml
@@ -1,17 +1,17 @@
 ---
 openapi: 3.0.0
 info:
-  title: Admin API
+  title: Boss API
   version: 1.0.0
-  description: API documentation for Admin role
+  description: API documentation for boss role
 paths:
   /api/users/login:
     post:
       summary: Returns generated token for access to the system
       tags:
         - Login
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -138,6 +138,52 @@ paths:
             The server encountered an unexpected condition that prevented it
             from fulfilling the request
 
+  /api/parents/pupilReports?startDate&endDate:
+    get:
+      security:
+        - bearerAuth: []
+      summary: Returns reports of pupil attendace by specified date
+      tags:
+        - Pupils
+      parameters:
+        - in: query
+          name: startDate
+          description: Specify string date "year-month-day"
+          required: true
+          schema:
+            type: string
+            required: true
+            description: YYYY-MM-DD format
+        - in: query
+          name: endDate
+          description: Specify string date "year-month-day"
+          required: true
+          schema:
+            type: string
+            required: true
+            description: YYYY-MM-DD format
+        - in: query
+          name: pupil
+          description: Specify hexadecimal string pupil identifier
+          required: true
+          schema:
+            type: string
+            required: true
+            description: Hexadecimal string generated by mongodb
+      responses:
+        "200":
+          description: Success getting attendance reports of pupil by specified date
+          content:
+            application/json:
+              schema:
+                type: array
+        "403":
+          description: Access to the requested resource is forbidden
+        "500":
+          description:
+            The server encountered an unexpected condition that prevented it
+            from fulfilling the request
+
   /api/pupils:
     get:
       security:
@@ -171,9 +217,6 @@ paths:
       summary: Returns specified pupil
       tags:
         - Pupils
-      x-roles:
-        - admin
-        - boss
       parameters:
         - in: path
           name: id
